test with broken errors unable to find files

--- a/package.json
+++ b/package.json
@@ -18,11 +18,21 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@angular/upgrade": "^12.0.3",
+    "@types/angular": "^1.8.1",
+    "angular": "1.8.x",
+    "angular-animate": "1.8.x",
+    "angular-resource": "1.8.x",
+    "angular-route": "1.8.x",
+    "bootstrap": "3.3.x",
+    "jquery": "3.3.x",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "angular-mocks": "1.8.x",
+    "protractor": "^5.4.4",
     "@angular-devkit/build-angular": "~12.0.3",
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
